--- a/styles.css
+++ b/styles.css
@@ -15,4 +15,47 @@
   
   .container {
     display: flex;
-    flex-w
+    flex-wrap: wrap;
+  }
+
+  .slidecontainer {
+    width: 100%; /*width of outside container*/
+  }
+
+  /* the slider itself */
+  .slider {
+    -webkit-appearance: none; /* ovverride default css styles */
+    appearance: none;
+    width: 100%; 
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none; 
+    opacity: 0.7; /* set transparency (for mouseover on hover)*/
+    -webkit-transition: .2s; /* .2 seconds transition on hover */
+    transition: opacity .2s;
+  }
+
+  /* mouseover effects */
+  .slider:hover {
+    opacity: 1; /* fully opaque on hover */
+  }
+
+  /* the slider handle */
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none; /*ovveride default look*/
+    appearance: none;
+    width: 25px; /* set a specific slider handle width */
+    height: 25px; /* slider handle height */
+    border-radius: 50%;
+    background: #04AA6D;
+    cursor: pointer; /* cursor on hover */
+  }
+
+.slider::-moz-range-thumb {
+    width: 25px; /*set a specific slider handle width */
+    height: 25px;
+    border-radius: 50%;
+    background: #04AA6D;
+    cursor: pointer;
+}
