--- a/styles.css
+++ b/styles.css
@@ -4,22 +4,41 @@
   }
   
   .cell {
-    width: 25px;
-    height: 25px;
-    margin: 1px;
-    border: 1px solid black;
+    width: 20px;
+    height: 20px;
+    margin: 0px;
+    border: .5px solid gray;
     display: flex;
     justify-content: center;
     align-items: center;
+    transform: translate(-50%,-50%);
   }
+
+ /* .cell:hover {
+    background-color: red;
+    opacity: 25%;
+  } */
   
   .container {
     display: flex;
     flex-wrap: wrap;
   }
 
+  .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #slidervalue {
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+  }
+
   .slidecontainer {
-    width: 100%; /*width of outside container*/
+    width: 50%; /*width of outside container*/
   }
 
   /* the slider itself */
